# translategemma-cli

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-cpu.txt  requirements-cuda.txt  requirements-dev.txt  requirements-mlx.txt
docs/: PRD.md
tests/: conftest.py  test_cli.py  test_config.py  test_detector.py  test_model.py  test_translator.py
translategemma_cli/: __init__.py  backends.py  cli.py  config.py  detector.py  model.py  translator.py
